Fix whitespace in label editor & trim labels on creation

--- a/ListList.Web/src/styles/_vars.scss
+++ b/ListList.Web/src/styles/_vars.scss
@@ -1,9 +1,13 @@
 [data-bs-theme='light'] {
   --node-border-color-expanded: rgba(0, 0, 0, 0.1);
   --node-border-color-parent: rgba(0, 0, 0, 0.175);
+
+  --textarea-focus-underline: rgba(0, 0, 0, 0.25);
 }
 
 [data-bs-theme='dark'] {
   --node-border-color-expanded: rgba(255, 255, 255, 0.1);
   --node-border-color-parent: rgba(255, 255, 255, 0.2);
+
+  --textarea-focus-underline: rgba(255, 255, 255, 0.25);
 }
